--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4295f7f790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f31834f2d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4295f50810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4295f50c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3183857690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3183807410&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42964fd410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42964fd610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3183dec2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3183d9f490&gt;]</pre>
 </div>
 
 </div>
