--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfb231d090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb7a3f8c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfb276f610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfb276f890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb7a6d4290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb7a6d4d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfb2cfd490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfb2cfd690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb7ac74250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb7ac74490&gt;]</pre>
 </div>
 
 </div>
