--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f156b5976d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa323493310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f156b866350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f156b893050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa32375f210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa32375fe50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f156be8c190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f156be27750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa323d0c390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa323d0c590&gt;]</pre>
 </div>
 
 </div>
