--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f848c62b550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1fe0df1fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f848ca4f710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f848ca4f990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fe10fe1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fe10fea90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f848cfdc350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f848cfdc550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fe169c4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fe169c6d0&gt;]</pre>
 </div>
 
 </div>
