--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3347171290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efcb1bcf4d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f334747fb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f334747fcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efcb1fd1b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efcb1fd1cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3347a0c450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3347a0c650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efcb2578310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efcb2578550&gt;]</pre>
 </div>
 
 </div>
