--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe296800190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f78b7336350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2964e1690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2964e1d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f78b791aa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f78b791aa10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe296a75650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe296a75850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f78b7eaa310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f78b7eaa510&gt;]</pre>
 </div>
 
 </div>
