--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd80c64b9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feab7752d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd80cbffb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd80cbffd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feab687f390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feab68672d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd80d1a7490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd80d1a7690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feab6e91cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feab6e29390&gt;]</pre>
 </div>
 
 </div>
