--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff9f6f16350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7374b1690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9f7214950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff9f72148d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7371a0910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7371a0e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9f77b32d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff9f77b34d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc73772e2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc73772e4d0&gt;]</pre>
 </div>
 
 </div>
