--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd3ce7f5150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56ae4ef510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3cec0ca10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd3cec0c350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56ae1c9b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56ae1c9d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3cf1a22d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd3cf1a24d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56ae772410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56ae772610&gt;]</pre>
 </div>
 
 </div>
