--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9ebfd60050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5abfd727d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ec0072750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ec0072ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ac005db90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ac005dd10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ec0601510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ec0601710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ac05ec410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ac05ec610&gt;]</pre>
 </div>
 
 </div>
