--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbface2bb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45f464a390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfacb24b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfacaf5250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45f3791bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45f3791d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfad0e0e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfad0934d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45f3d22210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45f3d22450&gt;]</pre>
 </div>
 
 </div>
