--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45f464a390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6c69b1c650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f45f3791bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f45f3791d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c69b30ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c69b30cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f45f3d22210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f45f3d22450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c6a0da490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c6a0da690&gt;]</pre>
 </div>
 
 </div>
