--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5782d82510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2c4b1c110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5783059150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5783071c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2c4e0da50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd2c4e0d690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f578367f9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f578361c510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2c539b5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd2c539b7d0&gt;]</pre>
 </div>
 
 </div>
