--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2c4b1c110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f78ba61f710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2c4e0da50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2c4e0d690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f78baa29110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f78baa29ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2c539b5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2c539b7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f78bb035d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f78bafe84d0&gt;]</pre>
 </div>
 
 </div>
