--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f02d9a1c6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc81c52910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f02d93d87d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f02d93a1210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc8191c390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc8191c590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f02d993e310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f02d9992990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc81eca350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc81eca550&gt;]</pre>
 </div>
 
 </div>
