--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdf0ddd0190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c23b39b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf0e0a8a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf0e0ac710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c23b67790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c23b67090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf0e6bf2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf0e6495d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c24105350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c24105550&gt;]</pre>
 </div>
 
 </div>
