--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f33df4a5090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f582620b1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f33df7a7d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f33df7a7f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f58267d9c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f58267d9e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f33dfd46290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f33dfd464d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5826d834d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5826d836d0&gt;]</pre>
 </div>
 
 </div>
