--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f52b4a8c590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e4c443fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52aeab6210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52aeae3f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e4c14ef10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e4c14eb50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52af0dc050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52af078690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e4c6db7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e4c6dba10&gt;]</pre>
 </div>
 
 </div>
