--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0246144c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c584ee3d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f024645cb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f024645c2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c588f8510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3c588f8dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f02469ef190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f02469ef390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c58e98210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3c58e98410&gt;]</pre>
 </div>
 
 </div>
