--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c584ee3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cddee8490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c588f8510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c588f8dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cdd864710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cdd853690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c58e98210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c58e98410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cdde77050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cdde01510&gt;]</pre>
 </div>
 
 </div>
